--- a/site/templates/twig/items/itm/warehouse/form.twig
+++ b/site/templates/twig/items/itm/warehouse/form.twig
@@ -88,7 +88,7 @@
 					<label for="codeabc">ABC Code</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="text" name="codeabc" id="codeabc" class="form-control form-control-sm w-auto" value="{{ warehouse.codeabc }}">
+					<input type="text" name="codeabc" id="codeabc" class="form-control form-control-sm w-auto" value="{{ warehouse.codeabc }}" oninput="this.value = this.value.toUpperCase()">
 				</div>
 			</div>
 			<div class="form-group row">
