FEAT: add Requests, Alerts js

--- a/site/templates/twig/items/itm/form/js/classes.js.twig
+++ b/site/templates/twig/items/itm/form/js/classes.js.twig
@@ -1,3 +1,5 @@
 {% include 'items/itm/form/js/classes/Configs.js.twig' %}
 {% include 'items/itm/form/js/classes/Inputs.js.twig' %}
+{% include 'items/itm/form/js/classes/Requests.js.twig' %}
+{% include 'items/itm/form/js/classes/Alerts.js.twig' %}
 {% include 'items/itm/form/js/classes/Form.js.twig' %}
