FIX: alert if itemid exists

--- a/site/templates/twig/items/itm/form/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/itm/form/js/classes/Inputs.js.twig
@@ -13,5 +13,6 @@ class ItmInputs {
 		this.form = $('#' + this.id);
 		this.weight = this.form.find('input[name=weight]');
 		this.grams  = this.form.find('input[name=grams]');
+		this.itemid = this.form.find('input[name=itemID]');
 	}
 }
