--- a/site/templates/twig/items/itm/costing/primary-vendor-item.twig
+++ b/site/templates/twig/items/itm/costing/primary-vendor-item.twig
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="col-sm-8">
 				<div class="input-group input-group-sm">
-					<input type="text" class="form-control text-right" value="{{ item.primaryvxm.get_unitcost(0)|number_format(4) }}">
+					<input type="text" class="form-control text-right" value="{{ item.primaryvxm.get_unitcost(0)|number_format(4) }}" readonly>
 					<div class="input-group-append">
 						<div class="input-group-text">{{ item.primaryvxm.uom_purchase }}</div>
 					</div>
