FIX: add configs for pricing fields

--- a/site/templates/twig/items/itm/pricing/js/classes.js.twig
+++ b/site/templates/twig/items/itm/pricing/js/classes.js.twig
@@ -1,3 +1,4 @@
+{# include 'items/itm/pricing/js/classes/Configs.js.twig' #}
 {% include 'items/itm/pricing/js/classes/Calculator.js.twig' %}
 {% include 'items/itm/pricing/js/classes/Inputs.js.twig' %}
 {% include 'items/itm/pricing/js/classes/Form.js.twig' %}
