REFACTOR: move unsaved alert into Alerts class

--- a/site/templates/twig/items/itm/js.twig
+++ b/site/templates/twig/items/itm/js.twig
@@ -85,18 +85,10 @@ $(function() {
 			var a = $(this);
 			var href = a.attr('href');
 
-			swal2.fire({
-				title: 'Changes have occurred!',
-				text: 'Do you want to save?',
-				icon: 'warning',
-				showCancelButton: true,
-				confirmButtonText: '<i class="fa fa-floppy-o" aria-hidden="true"></i> Yes',
-				cancelButtonText: 'No',
-			}).then((result) => {
-				if (result.value) {
+			alert.unsavedChanges(function(saveChanges) {
+				if (saveChanges) {
 					form.find('button[type=submit]').click();
-				} else if (result.dismiss === Swal.DismissReason.cancel) {
-					// Send HTTP GET Request to remove Record Lock
+				} else {
 					$.get('{{ page.url }}', function() {
 						window.location.href = href;
 					});
