--- a/site/templates/twig/items/itm/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/items/itm/form/js/classes/Alerts.js.twig
@@ -20,4 +20,23 @@ class ItmAlerts {
 			callback(result.value ? result.value : false);
 		});
 	}
+
+	unsavedChanges(callback) {
+		swal2.fire({
+			title: 'Changes have occurred!',
+			text: 'Do you want to save?',
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonText: '<i class="fa fa-floppy-o" aria-hidden="true"></i> Yes',
+			cancelButtonText: 'No',
+		}).then((result) => {
+			if (result.value) {
+				callback(true);
+				return true;
+			} else if (result.dismiss === Swal.DismissReason.cancel) {
+				callback(false);
+				return false;
+			}
+		});
+	}
 }
