--- a/site/templates/twig/items/vxm/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Alerts.js.twig
@@ -44,9 +44,11 @@ class VxmAlerts {
 			cancelButtonText: 'No',
 		}).then((result) => { // Return True for save, false for dismiss
 			if (result.value) {
-				callback(true)
+				callback(true);
+				return true;
 			} else if (result.dismiss === Swal.DismissReason.cancel) {
 				callback(false);
+				return false;
 			}
 		});
 	}
