--- a/site/templates/twig/items/itm/form/form.twig
+++ b/site/templates/twig/items/itm/form/form.twig
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="d-flex justify-content-between align-items-center">
+	<div class="d-flex justify-content-between align-items-center form-actions">
 		{#
 			Only show Edit Actions if the Item is
 			1. Locked for editing by the User
@@ -53,7 +53,7 @@
 				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 			</button>
 			{% if item.isNew() == false %}
-				<a href="{{ page.itmDeleteUrl(item.itemid) }}" class="btn btn-danger form_button delete_button">
+				<a href="{{ page.itmDeleteUrl(item.itemid) }}" class="btn btn-danger delete-itm delete_button">
 					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
 				</a>
 			{% endif %}
